correctif route event add swagger
